# Server-O3

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml  rust.yml
crates/api_routes/: Cargo.toml
crates/rustapi/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: main.rs  prelude.rs
crates/server/src/repository/: comment.rs  mod.rs  posts.rs  users.rs
crates/server/src/routes/: calc.rs  database.rs  index.rs  mod.rs  users.rs
crates/server/src/services/: fibo.rs
migrations/: 20260130100635_init.sql  20260201165259_add_user_table.sql  20260201172134_alter_user_table.sql  20260202121949_add_posts_table.sql  20260202125553_alter_posts_table.sql
src/: main.rs  prelude.rs
src/repository/: comment.rs  mod.rs  post.rs  posts.rs  user.rs  users.rs
src/routes/: calc.rs  database.rs  index.rs  mod.rs  users.rs
src/services/: hanoi.rs  mod.rs  sql_pool.rs
